--- a/SurfaceEnergyBudget_SubsetFiles.ipynb
+++ b/SurfaceEnergyBudget_SubsetFiles.ipynb
@@ -1913,9 +1913,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:miniconda3-mland_xr]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-miniconda3-mland_xr-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1927,7 +1927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
